--- a/Supervisor/devserver.conf
+++ b/Supervisor/devserver.conf
@@ -1,8 +1,8 @@
 [program:devserver]
-command =  php -S external_ip:8888 -t /var/www/html/openchat/                 ; Command to start app
+command =  php -S 192.168.43.38:8888 -t /home/hiteshpr/Documents/kwoc/                 ; Command to start app
 user = root                                                       ; User to run as
 autostart=true
 autorestart=true
-stdout_logfile = /var/www/html/openchat/openchat_supervisor.log   ; Where to write log messages
+stdout_logfile = /home/hiteshpr/Documents/kwoc/openchat_supervisor.log   ; Where to write log messages
 redirect_stderr = true                                                ; Save stderr in the same log
 environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8 				; Set UTF-8 as default encoding
